<resources>
    <string name="app_name">Yakker Trakker</string>
    <string name="title_activity_yakker_trakker">Trakker</string>
    <string name="key_primaryColor">#ff9c24</string>
    <string name="key_primaryColorDark">#e8c192</string>
    <string name="key_secondaryColor">#e8c192</string>

    <string name="key_route">ROUTE</string>
    <string name="key_routeStarted">ROUTE_STARTED</string>
    <string name="key_defaultRoute">Route</string>
    <string name="key_defaultDate">Date Not Found</string>
    <string name="key_defaultComment">No comments were given.</string>

    <string name="main_button">=</string>
    <string name="Start_Text">Start Route</string>
    <string name="Stop_Text">Stop Route</string>

    <string name="key_distanceHeader">Distance: </string>
    <string name="key_meters"> m </string>
    <string name="key_kilometers"> Km </string>
    <string name="key_feet"> ft </string>
    <string name="key_yards"> yd </string>
    <string name="key_sec"> s</string>
    <string name="key_min"> min</string>
    <string name="key_hour"> hr</string>
    <string name="key_timeHeader">Time: </string>
    <string name="key_metersPerSecond"> m/s</string>
    <string name="key_speedHeader">Speed:</string>
    <string name="key_cancel">Cancel</string>
    <string name="key_addRoute">Add Route</string>
    <string name="key_drawerOpen">Open</string>
    <string name="key_drawerClose">Close</string>
    <string name="key_distanceDefault">Distance: 0 m</string>
    <string name="key_timeDefault">Time: 0 s</string>
    <string name="key_speedDefault">Speed: 0 m/s</string>
    <string name="key_currentRoute">CURRENTROUTE</string>

    <string name="db_Button_Name">Start DataBase Test</string>
    <string name="Add_Route_Button">Add Route</string>
    <string name="Delete_Route_Button">Delete Route</string>
    <string name="Random_Coordinates_Button">Generate Random Coordinates for Route</string>
    <string name="Enter_Route_Name">Enter Route Name</string>
    <string name="Enter_Date">Enter Date</string>
    <string name="Enter_Comments">Enter Comments</string>
    <string name="Delete_Routes">Delete Route From the Database</string>
    <string name="Data_Message">Data Base Query Complete</string>

    <string-array name="distance_choice_array">
        <item>Feet</item>
        <item>Yards</item>
        <item>Meters</item>
        <item>Kilometers</item>
    </string-array>

    <string-array name="map_choice_array">
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Normal</item>
        <item>Terrain</item>
    </string-array>


</resources>
