<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">



    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content_frame"
        android:background="#ff9c24">

        <!-- Put anything you want in the Relative Layout or the frame layout will break-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#000"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="X"
                android:textColor="#FFF"
                android:id="@+id/clearButton"
                />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.yakkertrakker.www.myapplication.MapsActivity"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="66dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ToggleButton
                    android:id="@+id/start_stop"
                    android:button="@drawable/toggle_button_images"
                    android:background="@null"
                    android:textOff=""
                    android:textOn=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                    <TextView
                        android:id="@+id/details_window"
                        android:textColor="#fff"
                        android:text="@string/key_distanceHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        />
                    <TextView
                        android:id="@+id/time_window"
                        android:textColor="#fff"
                        android:text="@string/key_timeHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"/>
                    <TextView
                        android:id="@+id/speed_window"
                        android:textColor="#fff"
                        android:text="@string/key_speedHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"/>

                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

</FrameLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_yakker_trakker_drawer"/>

</android.support.v4.widget.DrawerLayout>